# tauri-yalmp

./: .prettierrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  status.txt  tailwind.config.js
.cspell/: custom-dictionary-workspace.txt
src/: App.tsx  Controls.tsx  Devices.tsx  output.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 20240814025600_create-initial-tables.sql  create_album_table.sql  create_disc_table.sql  create_track_table.sql
src-tauri/src/: app_state.rs  main.rs  play.rs  playlist.rs  rodio_devices.rs  scan.rs
