[package]
name = "yalmp"
version = "0.1.0"
description = "A Tauri App"
authors = ["Joseph Wilson"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rodio = {version = "0.20", features = ["symphonia-all"] }
tauri-plugin-shell = "2"
dirs = "5" 
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
